# reel-mind

./: .env.example  .gitignore  CLAUDE.md  IDEA.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/code-review/: SKILL.md
.claude/skills/cross-check/: SKILL.md
.claude/skills/dev-reel-mind/: SKILL.md
.claude/skills/ideate/: SKILL.md
.claude/skills/init-project/: SKILL.md
.claude/skills/scaffold/: SKILL.md
.claude/skills/start/: SKILL.md
.claude/skills/tech-debt/: SKILL.md
.github/workflows/: ci.yml  pipeline-a.yml  pipeline-b.yml  pipeline-c.yml
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/U1/functional-design/: business-logic-model.md  business-rules.md  domain-entities.md
aidlc-docs/construction/U1/nfr-design/: logical-components.md  nfr-design-patterns.md
aidlc-docs/construction/U1/nfr-requirements/: nfr-requirements.md  (+1 more)
aidlc-docs/construction/plans/: U1-functional-design-plan.md  U1-nfr-design-plan.md  U1-nfr-requirements-plan.md
aidlc-docs/inception/application-design/: application-design.md  component-dependency.md  component-methods.md  components.md  services.md  unit-of-work-dependency.md  unit-of-work-story-map.md  unit-of-work.md
aidlc-docs/inception/plans/: execution-plan.md
aidlc-docs/inception/requirements/: requirements.md
config/: defaults.yaml
docs/: DESIGN.md  PROJECT-VISION.md  REVIEW.md  TECH-DEBT.md  refinement-log.md  refinement-questions.md  requirements.md  tech-env.md  vision.md
docs/references/: code-review-template.md  cross-check-template.md  dev-skill-template.md  tech-debt-template.md
examples/book-tracker/: 1-idea.md  2-requirements.md  3-aidlc-state.md  4-final-structure.md  README.md
web/: package.json
