[project]
name = "reel-mind"
version = "0.1.0"
description = "24/7 autonomous AI short-form video content factory"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.0",
    "supabase>=2.8.0",
    "boto3>=1.35.0",              # R2 (S3-compatible)
    "pyyaml>=6.0.2",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "python-telegram-bot>=21.6",
    "ffmpeg-python>=0.2.0",
    "moviepy>=2.0.0",
    "google-api-python-client>=2.145.0",
    "google-auth-oauthlib>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.112.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-PyYAML",
]

[project.scripts]
reel-mind = "reel_mind.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reel_mind"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "S", "A", "C4", "PT", "RET", "SIM", "TID"]
ignore = ["S101"]  # assert allowed in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["reel_mind"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: hits real external services (skipped in CI by default)",
    "property: Hypothesis property-based tests",
]
